clusters/apps/arr/sonarr/sonarr-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arr-stack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arr-stack
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: sonarr
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\kompose\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: sonarr
    spec:
      containers:
        - env:
            - name: ARRPATH
              valueFrom:
                configMapKeyRef:
                  key: ARRPATH
                  name: config-sonarr
            - name: PGID
              valueFrom:
                configMapKeyRef:
                  key: PGID
                  name: config-sonarr
            - name: PUID
              valueFrom:
                configMapKeyRef:
                  key: PUID
                  name: config-sonarr
            - name: TZ
              valueFrom:
                configMapKeyRef:
                  key: TZ
                  name: config-sonarr
          image: linuxserver/sonarr:latest
          name: sonarr
          ports:
            - containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sonarr-claim0
            - mountPath: /data/Backup
              name: sonarr-claim1
            - mountPath: /data/tvshows
              name: sonarr-claim2
            - mountPath: /downloads
              name: sonarr-claim3
      hostname: sonarr
      restartPolicy: Always
      volumes:
        - name: sonarr-claim0
          persistentVolumeClaim:
            claimName: sonarr-claim0
        - name: sonarr-claim1
          persistentVolumeClaim:
            claimName: sonarr-claim1
        - name: sonarr-claim2
          persistentVolumeClaim:
            claimName: sonarr-claim2
        - name: sonarr-claim3
          persistentVolumeClaim:
            claimName: sonarr-claim3
