clusters/apps/arr/sonarr/sonarr-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonnar-route
  namespace: arr-stack
spec:
  entryPoints:
    - web 
  routes:
    - kind: Rule
      match: Host(`local.wololoaeyoyo.com`)
      services:
        - name: sonarr 
          port: 80
